Use git commit parameter override

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -647,8 +647,7 @@ Resources:
                   {
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
                     "NotificationsStackName": "${NotificationsStackName}",
-                    "InfrastructureGitCommit": "latest",
-                    "Foo": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]}
+                    "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]}
                   }
                 TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json
                 TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
@@ -714,8 +713,7 @@ Resources:
                   {
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
                     "NotificationsStackName": "${NotificationsStackName}",
-                    "InfrastructureGitCommit": "latest",
-                    "Foo": "Bar"
+                    "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]}
                   }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-production
