--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -68,6 +68,12 @@ Parameters:
       The S3 object key for the staging template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
+  InfrastructureConfigProductionKey:
+    Default: template-config-production.zip
+    Description: >
+      The S3 object key for the production template configuration file archive
+      (.zip), inside the InfrastructureConfigBucket
+    Type: String
 Resources:
   # S3 Buckets
   ArtifactStore:
@@ -135,6 +141,11 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:getObject"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/*"]]
               - Effect: Allow
                 Action:
                   - "s3:putObject"
@@ -267,6 +278,7 @@ Resources:
                   - !GetAtt InfrastructureRepoSourceS3SyncFunction.Arn
                   - !GetAtt InfrastructureCommitProxyFunction.Arn
                   - !GetAtt EnvironmentStateCaptureFunction.Arn
+                  - !GetAtt ProductionConfigPseudoSourceFunction.Arn
         # Lets CodePipeline start CodeBuild (for acceptance tests, etc)
         - PolicyName: CodeBuildPolicy
           PolicyDocument:
@@ -467,6 +479,30 @@ Resources:
         - Key: Project
           Value: Infrastructure
       Timeout: 3
+  ProductionConfigPseudoSourceFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: cd/production-config-pseudo-source.zip
+      Description: >
+        Generates output artifact of the production template config
+      Environment:
+        Variables:
+          INFRASTRUCTURE_CONFIG_BUCKET:
+            Fn::ImportValue:
+              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+          INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
+      Handler: lambda_function.lambda_handler
+      MemorySize: 256
+      Role: !GetAtt LambdaExecutionIAMRole.Arn
+      Runtime: python3.6
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 8
   # Lambda Alarms
   SourceSyncErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -588,7 +624,7 @@ Resources:
               OutputArtifacts:
                 - Name: MetaRepoSourceArtifact
               RunOrder: 1
-            - Name: S3
+            - Name: StagingConfig
               ActionTypeId:
                 Category: Source
                 Owner: AWS
@@ -642,7 +678,6 @@ Resources:
                 ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-staging
-                 # TODO This should use the git commit hash from the artifact
                 ParameterOverrides: !Sub |
                   {
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
@@ -657,20 +692,6 @@ Resources:
                 - Name: RepoStateArtifact
               RunOrder: 1
             - Name: CaptureStagingState
-              ActionTypeId:
-                Category: Invoke
-                Owner: AWS
-                Provider: Lambda
-                Version: 1
-              Configuration:
-                FunctionName: !Ref EnvironmentStateCaptureFunction
-              InputArtifacts:
-                - Name: InfrastructureRepoSourceArtifact
-                - Name: TemplateConfigStagingZipArtifact
-              RunOrder: 2
-        - Name: Testing
-          Actions:
-            - Name: Acceptance
               ActionTypeId:
                 Category: Invoke
                 Owner: AWS
@@ -699,6 +720,19 @@ Resources:
         #       RunOrder: 1
         - Name: Production
           Actions:
+            - Name: GetProductionConfig
+              ActionTypeId:
+                Category: Invoke
+                Owner: AWS
+                Provider: Lambda
+                Version: 1
+              Configuration:
+                FunctionName: !Ref ProductionConfigPseudoSourceFunction
+              InputArtifacts:
+                - Name: TemplateConfigStagingZipArtifact
+              OutputArtifacts:
+                - Name: TemplateConfigProductionZipArtifact
+              RunOrder: 1
             - Name: CreateChangeSet
               ActionTypeId:
                 Category: Deploy
@@ -717,12 +751,13 @@ Resources:
                   }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-production
-                TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json # TODO
+                TemplateConfiguration: TemplateConfigProductionZipArtifact::production.json
                 TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
               InputArtifacts:
-                - Name: TemplateConfigStagingZipArtifact
+                - Name: TemplateConfigProductionZipArtifact
                 - Name: InfrastructureRepoSourceArtifact
-              RunOrder: 1
+                - Name: RepoStateArtifact
+              RunOrder: 2
             - Name: ApproveChangeSet
               ActionTypeId:
                 Category: Approval
@@ -732,7 +767,7 @@ Resources:
               Configuration:
                 NotificationArn: !Ref CodePipelineApprovalsSnsTopic
                 CustomData: "TODO Get info about the deploy (last commit, etc)"
-              RunOrder: 2
+              RunOrder: 3
             - Name: ExecuteChangeSet
               ActionTypeId:
                 Category: Deploy
@@ -745,7 +780,7 @@ Resources:
                 ChangeSetName: !Sub ${AWS::StackName}RootProductionChangeSet
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-production
-              RunOrder: 3
+              RunOrder: 4
             - Name: CaptureProductionState
               ActionTypeId:
                 Category: Invoke
@@ -757,7 +792,7 @@ Resources:
               InputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
                 - Name: TemplateConfigStagingZipArtifact
-              RunOrder: 4
+              RunOrder: 5
   # CodeBuild Projects
   AcceptanceTestBuildProject:
     Type: "AWS::CodeBuild::Project"
