Get config rollover working

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -145,7 +145,7 @@ Resources:
                 Action:
                   - "s3:getObject"
                 Resource:
-                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/*"]]
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
               - Effect: Allow
                 Action:
                   - "s3:putObject"
@@ -158,6 +158,7 @@ Resources:
                   - "s3:getObject"
                 Resource:
                   - !Sub arn:aws:s3:::${ArtifactStore}/*
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigProductionKey]]
         - PolicyName: CodePipelinePolicy
           PolicyDocument:
             Version: "2012-10-17"
