Improve state capture for production config

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -469,17 +469,21 @@ Resources:
         Capture template and config version data for deployed environments
       Environment:
         Variables:
+          INFRASTRUCTURE_CONFIG_BUCKET:
+            Fn::ImportValue:
+              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+          INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
           INFRASTRUCTURE_SNAPSHOTS_BUCKET:
             Fn::ImportValue:
               !Sub ${InfrastructureStorageStackName}-InfrastructureSnapshotsBucket
       Handler: index.handler
-      MemorySize: 128
+      MemorySize: 256
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
       Tags:
         - Key: Project
           Value: Infrastructure
-      Timeout: 3
+      Timeout: 5
   ProductionConfigPseudoSourceFunction:
     Type: "AWS::Lambda::Function"
     Properties:
