Update parameter naming

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -36,14 +36,14 @@ Parameters:
     Type: String
   OpsDebugMessagesSnsTopicArn:
     Type: String
-  ECRRegion:
+  EcrRegion:
     Type: String
   SecretsBase:
     Type: String
   SecretsRegion:
     Type: String
   ##############################################################################
-  AudiogramECRImageTag:
+  AudiogramEcrImageTag:
     Type: String
   AudiogramSecretsVersion:
     Type: String
@@ -102,7 +102,7 @@ Resources:
             - start
           Cpu: 512
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${ECRRegion}.amazonaws.com/audiogram:${AudiogramECRImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/audiogram:${AudiogramEcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
