--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -37,7 +37,7 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  ECRRegion:
+  EcrRegion:
     Type: String
   SecretsBase:
     Type: String
@@ -45,7 +45,7 @@ Parameters:
     Type: String
   # Shared ENV #################################################################
   # Castle ECS #################################################################
-  CastleECRImageTag:
+  CastleEcrImageTag:
     Type: String
   # Castle ENV #################################################################
   CastleSecretsVersion:
@@ -114,7 +114,7 @@ Resources:
               Value: !Ref SecretsRegion
           Essential: true
           # TODO
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${ECRRegion}.amazonaws.com/castle.prx.org:${CastleECRImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/castle.prx.org:${CastleEcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
