--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -16,6 +16,10 @@ Metadata:
           - InfrastructureStorageStackName
           - NotificationsStackName
       - Label:
+          default: Template Configuration
+        Parameters:
+          - InfrastructureConfigStagingKey
+      - Label:
           default: GitHub API
         Parameters:
           - GitHubToken
@@ -29,6 +33,8 @@ Metadata:
         default: Storage stack name
       NotificationsStackName:
         default: Notifications stack name
+      InfrastructureConfigStagingKey:
+        default: Staging S3 object key
       GitHubToken:
         default: Access token
       GitHubWebhookSecret:
@@ -43,6 +49,12 @@ Parameters:
   NotificationsStackName:
     Default: notifications
     Description: The name of a previously launched notifications stack
+    Type: String
+  InfrastructureConfigStagingKey:
+    Default: template-config-staging.zip
+    Description: >
+      The S3 object key for the staging template configuration file archive
+      (.zip), inside the InfrastructureConfigBucket
     Type: String
   GitHubToken:
     Description: >
@@ -168,6 +180,12 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:getObject"
+                  - "s3:putObject"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
               - Effect: Allow
                 Action:
                   - "s3:putObject"
@@ -311,8 +329,12 @@ Resources:
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
         Variables:
-          GITHUB_ACCESS_TOKEN: !Ref GitHubToken
           CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
+          GITHUB_ACCESS_TOKEN: !Ref GitHubToken
+          INFRASTRUCTURE_CONFIG_BUCKET:
+            Fn::ImportValue:
+              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+          INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
