Switch CD source to master branch

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -637,7 +637,7 @@ Resources:
               Configuration:
                 Owner: PRX
                 Repo: Infrastructure
-                Branch: prx-ci
+                Branch: master
                 OAuthToken: !Ref GitHubToken
               OutputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
