More work on S3 template URL's

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -79,7 +79,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
         EnvironmentType: !Ref EnvironmentType
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/vpc.yml"]]
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/vpc.yml"]]
       TimeoutInMinutes: "5"
   CertificateStack:
     Type: "AWS::CloudFormation::Stack"
@@ -90,7 +90,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         VPC: !GetAtt VPCStack.Outputs.VPC
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/certificate.yml"]]
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/certificate.yml"]]
       TimeoutInMinutes: "5"
   ECSClusterStack:
     Type: "AWS::CloudFormation::Stack"
@@ -116,7 +116,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         SecretsKey: !Ref SecretsKey
         SecretsRegion: !Ref EcrRegion
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
   LoadBalancersStack:
     Type: "AWS::CloudFormation::Stack"
@@ -131,7 +131,7 @@ Resources:
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/load-balancers.yml"]]
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/load-balancers.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
   #### CASTLE ##################################################################
@@ -164,7 +164,7 @@ Resources:
         SecretsRegion: !Ref EcrRegion
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
   #### AUDIOGRAMS ##############################################################
@@ -198,7 +198,7 @@ Resources:
         SecretsRegion: !Ref EcrRegion
         AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
   # upload.prx.org #############################################################
@@ -219,7 +219,7 @@ Resources:
   #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
   #       CodeBucket: !Ref InfrastructureCodeBucket
   #       LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
   #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
   #     TimeoutInMinutes: "5"
 Outputs:
@@ -338,7 +338,7 @@ Outputs:
 #   #       CmsEnvPublicAssetSecret: !Ref CmsEnvPublicAssetSecret
 #   #       CmsEnvRailsEnv: !Ref CmsEnvRailsEnv
 #   #       CmsEnvRailsSecretKey: !Ref CmsEnvRailsSecretKey
-#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms.prx.org/cms.prx.org.yml"]]
+#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms.prx.org/cms.prx.org.yml"]]
 #   #     TimeoutInMinutes: "5"
 # ################################################################################
 # #### PUBLISH ###################################################################
@@ -378,7 +378,7 @@ Outputs:
 #         PublishEnvNewRelicLicenseKey: !Ref PublishEnvNewRelicLicenseKey
 #         PublishEnvSignUrl: !Ref PublishEnvSignUrl
 #         PublishEnvUseCloudfront: !Ref PublishEnvUseCloudfront
-#       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
+#       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
 #       TimeoutInMinutes: "5"
 #   # CmsAudioLambdaStack:
 #   #   Type: "AWS::CloudFormation::Stack"
@@ -388,7 +388,7 @@ Outputs:
 #   #     Parameters:
 #   #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-CodeBucket"]]
 #   #       LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaZipName
-#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
+#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
 #   #     TimeoutInMinutes: "5"
 #   # CmsImageLambdaStack:
 #   #   Type: "AWS::CloudFormation::Stack"
@@ -398,5 +398,5 @@ Outputs:
 #   #     Parameters:
 #   #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-CodeBucket"]]
 #   #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
-#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
+#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
 #   #     TimeoutInMinutes: "5"
