Rename notifications Rest API

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -288,7 +288,7 @@ Resources:
   RestApi:
     Type: "AWS::ApiGateway::RestApi"
     Properties:
-      Name: !Sub infrastructure-${AWS::StackName}
+      Name: !Sub ${AWS::StackName} API
       Description: >
         Provides an API for inbound requests used by the notifications stack,
         such as Slack interactive messages
