Add output to CI for GitHub webhook endpoint

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -488,11 +488,7 @@ Resources:
         - Key: Project
           Value: Infrastructure
       TimeoutInMinutes: 16
-# TODO Output a pretty URL for the webbook endpoint,
-# like ci-us-east-2.prx.tech/v1/github/webhook
-# Outputs:
-#   StagingTemplateBucket:
-#     Description: >
-#       The name of the bucket that templates have been synced to, to be used
-#       in a staging environment
-#     Value: !Ref StagingTemplateBucket
+Outputs:
+  GitHubWebhookEndpointUrl:
+    Description:
+    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/v1/github/webhook"
