Fix GitHub webhook output

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -490,5 +490,4 @@ Resources:
       TimeoutInMinutes: 16
 Outputs:
   GitHubWebhookEndpointUrl:
-    Description:
-    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/v1/github/webhook"
+    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiProdStage}/v1/github/webhook"
