Cleanup Lambda alarms

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -351,13 +351,13 @@ Resources:
       AlarmName: GitHub Webhook Endpoint Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub webhook endpoint lambda has exceeded 0 in
         the last five minutes.
@@ -378,13 +378,13 @@ Resources:
       AlarmName: GitHub Event Handler Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub event handler lambda has exceeded 0 in
         the last five minutes.
@@ -398,6 +398,33 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref GitHubEventHandlerLambdaFunction
+  CodeBuildCallbackHandlerErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: CodeBuild Callback Handler Lambda Errors
+      AlarmActions:
+        - Fn::ImportValue:
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+      InsufficientDataActions:
+        - Fn::ImportValue:
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+      OKActions:
+        - Fn::ImportValue:
+            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+      AlarmDescription: >
+        The error rate on the CodeBuild callback handler lambda has exceeded 0
+        in the last five minutes.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref CodeBuildCallbackHanlderLambdaFunction
   # API Gateway Deployments
   ## /
   RestApi:
