--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -211,11 +211,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: Slack Relay Lambda Errors
       AlarmActions:
-        - !Ref OpsDebugMessagesSnsTopic
+        - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
-        - !Ref OpsDebugMessagesSnsTopic
+        - !Ref OpsWarnMessagesSnsTopic
       OKActions:
-        - !Ref OpsDebugMessagesSnsTopic
+        - !Ref OpsWarnMessagesSnsTopic
       AlarmDescription: >
         The error rate on the Slack relay lambda has exceeded 0 in
         the last minute.
@@ -235,11 +235,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: Ike Callback Handler Lambda Errors
       AlarmActions:
-        - !Ref OpsDebugMessagesSnsTopic
+        - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
-        - !Ref OpsDebugMessagesSnsTopic
+        - !Ref OpsWarnMessagesSnsTopic
       OKActions:
-        - !Ref OpsDebugMessagesSnsTopic
+        - !Ref OpsWarnMessagesSnsTopic
       AlarmDescription: >
         The error rate on the Ike callback handler lambda has exceeded 0 in
         the last minute.
