Clean up templates

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -226,9 +226,12 @@ Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.CertificateArn
-  # AudiogramHostedZoneDNSName:
-  #   Description: Domain name for audiogram app
-  #   Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
+  AudiogramHostedZoneDNSName:
+    Description: Domain name for audiogram app
+    Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
+  CastleHostedZoneDNSName:
+    Description: Domain name for castle app
+    Value: !GetAtt CastleStack.Outputs.HostedZoneDNSName
   # PublishHostedZoneDNSName:
   #   Description: Domain name for publish app
   #   Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
