--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -14,6 +14,7 @@ Parameters:
   EnvironmentTypeAbbreviation:
     Type: String
 Resources:
+  # IAM Roles
   LambdaBasicExecutionIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -29,6 +30,7 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+  # API Gateway
   UploadRestApi:
     Type: "AWS::ApiGateway::RestApi"
     Properties:
@@ -93,6 +95,7 @@ Resources:
       Description: production stage for upload lambda gateway integration
       RestApiId: !Ref UploadRestApi
       DeploymentId: !Ref UploadRestApiDeployment
+  # Lambda Permissions
   UploadRestApiLambdaPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
@@ -100,6 +103,7 @@ Resources:
       FunctionName: !Ref UploadLambdaFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${UploadRestApi}/${UploadRestApiStage}/*"
+  # Lambda Functions
   UploadLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -115,6 +119,7 @@ Resources:
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
       Runtime: nodejs6.10
       Timeout: 5
+  # Lambda Alarms
   UploadErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
