Non health check path

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -60,7 +60,7 @@ Resources:
     Properties:
       HealthCheckIntervalSeconds: 60
       UnhealthyThresholdCount: 10
-      HealthCheckPath: /
+      HealthCheckPath: /api/v1
       Name: !Sub castle-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
