Fix CodeBuild callback definition

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -317,7 +317,7 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
-      Timeout: 3
+      Timeout: 10
   CodeBuildCallbackHanlderLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -335,10 +335,10 @@ Resources:
             Fn::ImportValue:
               !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
-      Handler: index.handler
+      Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: nodejs6.10
+      Runtime: python3.6
       Tags:
         - Key: Project
           Value: Infrastructure
