Give CI wildcard a name tag

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -79,6 +79,11 @@ Resources:
       DomainValidationOptions:
         - ValidationDomain: prx.tech
           DomainName: !Sub "*.${AWS::Region}.${AWS::StackName}.prx.tech"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: Name
+          Value: !Sub "${AWS::StackName} ${AWS::Region} wildcard"
   # S3 Buckets
   CiCodeBuildSourceArchiveBucket:
     Type: "AWS::S3::Bucket"
