Size up ECS staging ASG

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -48,11 +48,11 @@ Mappings:
       WarningThreshold: "2"
       MaxSize: "3"
     Staging:
-      InstanceType: t2.micro
-      MinSize: "1"
-      DefaultDesiredCapacity: "1"
-      WarningThreshold: "1"
-      MaxSize: "1"
+      InstanceType: t2.small
+      MinSize: "2"
+      DefaultDesiredCapacity: "2"
+      WarningThreshold: "2"
+      MaxSize: "2"
     Production:
       InstanceType: t2.small
       MinSize: "4"
