Add production deploy notification

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -883,6 +883,17 @@ Resources:
                 Version: 1
               Configuration:
                 FunctionName: !Ref EnvironmentStateCaptureFunction
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 5
+            - Name: DeploymentNotification
+              ActionTypeId:
+                Category: Invoke
+                Owner: AWS
+                Provider: Lambda
+                Version: 1
+              Configuration:
+                FunctionName: !Ref DeploymentNotificationFunction
                 UserParameters: Production
               InputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
