--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -15,6 +15,8 @@ Resources:
       DomainValidationOptions:
         - ValidationDomain: prx.tech
           DomainName: !Sub "*.${VPC}.prx.tech"
+      SubjectAlternativeNames:
+        - "*.staging.prx.tech"
       Tags:
         - Key: Project
           Value: platform.prx.org
